# docs/api/openapi.yaml
@@ -930,6 +930,10 @@ paths:
         schema:
           type: string
       - in: query
+        name: last_reported_by_agent_key
+        schema:
+          type: string
+      - in: query
         name: limit
         schema:
           type: integer
@@ -2217,6 +2221,9 @@ components:
         approval_status:
           $ref: '#/components/schemas/ApprovalStatusEnum'
         assigned_agent_key_id:
+          type: string
+          maxLength: 255
+        last_reported_by_agent_key:
           type: string
           maxLength: 255
         limit:
